--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Zero">0</string>
     <string name="_0">0°</string>
+    <string name="today">Today</string>
+    <string name="h">H</string>
+    <string name="l">L</string>
+    <string name="time">Time</string>
+    <string name="current_temp">Curent temp</string>
+    <string name="humidity">Humidity</string>
 </resources>
