--- a/WeatherApplication/app/src/main/res/values/strings.xml
+++ b/WeatherApplication/app/src/main/res/values/strings.xml
@@ -1,62 +1,5 @@
 <resources>
-    <string name="app_name">WeatherApplication</string>
-
-    <string-array name="day">
-        <item>Monday</item>
-        <item>Tuesday</item>
-        <item>Wednesday</item>
-        <item>Thursday</item>
-        <item>Friday</item>
-        <item>Saturday</item>
-        <item>Sunday</item>
-        <item>Monday</item>
-        <item>Tuesday</item>
-        <item>Wednesday</item>
-    </string-array>
-
-    <string-array name="forecast">
-        <item>Scattered Clouds</item>
-        <item>Rainy</item>
-        <item>Sunny</item>
-        <item>Clouds</item>
-        <item>Snow</item>
-        <item>Scattered Clouds</item>
-        <item>Rainy</item>
-        <item>Sunny</item>
-        <item>Snow</item>
-        <item>Clouds</item>
-    </string-array>
-
-    <string-array name="temperature">
-        <item>17</item>
-        <item>15</item>
-        <item>20</item>
-        <item>30</item>
-        <item>13</item>
-        <item>20</item>
-        <item>1</item>
-        <item>4</item>
-        <item>5</item>
-        <item>9</item>
-    </string-array>
-
-    <string-array name="action_images" >
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-        <item>image01</item>
-    </string-array>
-
-
-
-
-
+    <string name="app_name">WeatherApp</string>
 
 </resources>
 
