--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -2,9 +2,6 @@
     <string name="app_name">9,6_WeatherApplication</string>
     <string name="day_of_week">Day of Week</string>
     <string name="forecast">Forecast</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="Zero">0</string>
     <string name="_0">0°</string>
     <string name="today">Today</string>
@@ -13,4 +10,14 @@
     <string name="time">Time</string>
     <string name="current_temp">Curent temp</string>
     <string name="humidity">Humidity</string>
-</resources>
+    <string name="sync_header">Sync</string>
+    <string name="hello_settings_fragment">settings_fragment</string>
+    <string name="hello_details_fragment">Hello Details Fragment</string>
+    <string name="label_forecast_list_fragment_title">Daily Weather</string>
+    <string name="settings_icon">Settings icon</string>
+    <string name="settings">Settings</string>
+    <string name="share">Share</string>
+    <string name="about">About</string>
+    <string name="exit">Exit</string>
+    <string name="search">Search</string>
+ </resources>
