--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
     <string name="h">H</string>
     <string name="l">L</string>
     <string name="time">Time</string>
-    <string name="current_temp">Curent temp</string>
-    <string name="humidity">Humidity</string>
+    <string name="current_temp">Current temp </string>
+    <string name="humidity">Humidity </string>
     <string name="sync_header">Sync</string>
     <string name="hello_settings_fragment">settings_fragment</string>
     <string name="hello_details_fragment">Hello Details Fragment</string>
@@ -20,4 +20,8 @@
     <string name="about">About</string>
     <string name="exit">Exit</string>
     <string name="search">Search</string>
- </resources>
+    <string name="image_details">Image details</string>
+    <string name="_100">100</string>
+    <string name="pressure">Pressure</string>
+    <string name="wind">Wind</string>
+</resources>
