--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -9,13 +9,13 @@
     <string name="l">L</string>
     <string name="time">Time</string>
     <string name="current_temp">Current temp </string>
-    <string name="humidity">Humidity </string>
+    <string name="humidity">Humidity  </string>
     <string name="sync_header">Sync</string>
     <string name="hello_settings_fragment">settings_fragment</string>
     <string name="hello_details_fragment">Hello Details Fragment</string>
     <string name="label_forecast_list_fragment_title">Daily Weather</string>
     <string name="settings_icon">Settings icon</string>
-    <string name="settings">Settings</string>
+    <string name="setting_menu_title">Settings</string>
     <string name="share">Share</string>
     <string name="about">About</string>
     <string name="exit">Exit</string>
@@ -24,4 +24,7 @@
     <string name="_100">100</string>
     <string name="pressure">Pressure</string>
     <string name="wind">Wind</string>
+    <string name="your_location">Your Location</string>
+    <string name="label_gragment_settings">Settings</string>
+    <string name="label_forecast_details">Forecast Details</string>
 </resources>
