--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="_100">100</string>
     <string name="pressure">Pressure</string>
     <string name="wind">Wind</string>
-    <string name="wind_speed">km/hr</string>
+    <string name="wind_speed_m">m/s</string>
     <string name="your_location">Your Location</string>
     <string name="label_gragment_settings">Settings</string>
     <string name="label_forecast_details">Forecast Details</string>
@@ -39,6 +39,15 @@
     <string name="celsius_subtitle">Celsius</string>
     <string name="fahrenheit_subtitle">Fahrenheit</string>
     <string name="days_selected">Days selected</string>
+    <string name="icon">Icon</string>
+    <string name="today_temp_icon">Today Temp Icon</string>
+    <string name="wind_speed_i">mph</string>
+    <string name="pesure_m"> mb</string>
+    <string name="presure_i"> in</string>
+    <string name="degree_celsius">°C</string>
+    <string name="degree_fahrenheit">°F</string>
+    <string name="units_settings_label">Unit System</string>
+    <string name="slash">/</string>
     <string-array name="days_array">
         <item>14</item>
         <item>7</item>
