--- a/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -9,4 +9,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_details_fragment">Hello details fragment</string>
     <string name="label_weather_forecast_fragment_title">Daily Weather</string>
+    <string name="settings_menu_title">settings_menu_title</string>
+    <string name="weather_notification_setting_title">Weather Notification</string>
+    <string name="unit_setting_title">Unit system</string>
+    <string name="days_setting_title">Total Days in List</string>
+    <string name="celsius_subtitle">Celsius</string>
+    <string name="fahrenheit_subtitle">Fahrenheit</string>
 </resources>
