--- a/9.6_WeatherApplication/app/src/main/res/values/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values/strings.xml
@@ -21,14 +21,14 @@
     <string name="exit">Exit</string>
     <string name="search">Search</string>
     <string name="image_details">Image details</string>
-    <string name="_100">100</string>
+    <string name="_100" translatable="false">100</string>
     <string name="pressure">Pressure</string>
     <string name="wind">Wind</string>
     <string name="wind_speed_m">m/s</string>
     <string name="your_location">Your Location</string>
     <string name="label_gragment_settings">Settings</string>
     <string name="label_forecast_details">Forecast Details</string>
-    <string name="humidity_icon">Humidity icon</string>
+    <string name="humidity_icon" translatable="false">Humidity icon</string>
     <string name="my_settings_title">My Settings Title</string>
     <string name="wind_icon">wind icon</string>
     <string name="notification_settings_subtitle">My settings subtitle</string>
@@ -36,18 +36,18 @@
     <string name="weather_notification_settings_subtitle">Weather Notification</string>
     <string name="unit_setting_title">Unit system</string>
     <string name="days_setting_title">Total days in List</string>
-    <string name="celsius_subtitle">Celsius</string>
-    <string name="fahrenheit_subtitle">Fahrenheit</string>
-    <string name="days_selected">Days selected</string>
-    <string name="icon">Icon</string>
-    <string name="today_temp_icon">Today Temp Icon</string>
+    <string name="days_selected">Days selected </string>
+    <string name="icon" translatable="false">Icon</string>
+    <string name="today_temp_icon" translatable="false">Today Temp Icon</string>
     <string name="wind_speed_i">mph</string>
     <string name="pesure_m"> mb</string>
     <string name="presure_i"> in</string>
-    <string name="degree_celsius">°C</string>
-    <string name="degree_fahrenheit">°F</string>
+    <string name="degree_celsius" translatable="false">°C</string>
+    <string name="degree_fahrenheit" translatable="false">°F</string>
     <string name="units_settings_label">Unit System</string>
-    <string name="slash">/</string>
+    <string name="slash" translatable="false">/</string>
+    <string name="space" translatable="false">\ \</string>
+    <string name="default_days_selected" translatable="false">14</string>
     <string-array name="days_array">
         <item>14</item>
         <item>7</item>
