--- a/WeatherApplication/app/src/main/res/values-bs-rBA/strings.xml
+++ b/WeatherApplication/app/src/main/res/values-bs-rBA/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Hava Durumu</string>
-
-
+    <string name="app_name">Vremenska Prognoza</string>
+    <!-- Preference Titles -->
     <string name="messages_header">Messages</string>
     <string name="sync_header">Sync</string>
     <string name="settings_menu_title">Settings</string>
