--- a/MyWeatherApp/app/src/main/res/values-tr/strings.xml
+++ b/MyWeatherApp/app/src/main/res/values-tr/strings.xml
@@ -3,4 +3,17 @@
     <string name="app_name">Hava Durumu</string>
     <string name="weekdays">Haftanin gunu</string>
     <string name="days_weather_forecast">Hava Tahmini</string>
+
+    <string name="hello_settings_fragment">Hello Settings fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_details_fragment">Hello details fragment</string>
+    <string name="label_weather_forecast_fragment_title">Daily Weather</string>
+    <string name="settings_menu_title">Settings</string>
+    <string name="weather_notification_setting_title">Weather Notification</string>
+    <string name="unit_setting_title">Unit system</string>
+    <string name="days_setting_title">Total Days in List</string>
+    <string name="celsius_subtitle">Celsius</string>
+    <string name="fahrenheit_subtitle">Fahrenheit</string>
+    <string name="your_location_menu_title">Your location</string>
+    <string name="share_menu_title">Share</string>
 </resources>
