--- a/MyWeatherApp/app/src/main/res/values/strings.xml
+++ b/MyWeatherApp/app/src/main/res/values/strings.xml
@@ -2,17 +2,19 @@
     <string name="app_name">My Weather App</string>
     <string name="weekdays">weekdays</string>
     <string name="days_weather_forecast">days_weather_forecast</string>
-    <string name="_11">11°</string>
-    <string name="_33">33°</string>
+    <string name="_11" translatable="false">11°</string>
+    <string name="_33" translatable="false">33°</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_settings_fragment">Hello Settings fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_details_fragment">Hello details fragment</string>
     <string name="label_weather_forecast_fragment_title">Daily Weather</string>
-    <string name="settings_menu_title">settings_menu_title</string>
-    <string name="weather_notification_setting_title">Weather Notification</string>
-    <string name="unit_setting_title">Unit system</string>
+    <string name="settings_menu_title">Settings</string>
+    <string name="weather_notification_setting_title">Hava durumu notifikasyon</string>
+    <string name="unit_setting_title">Unit sistemi</string>
     <string name="days_setting_title">Total Days in List</string>
     <string name="celsius_subtitle">Celsius</string>
     <string name="fahrenheit_subtitle">Fahrenheit</string>
+    <string name="your_location_menu_title">Your location</string>
+    <string name="share_menu_title">Share</string>
 </resources>
