--- a/WeatherApplication/app/src/main/res/values/strings.xml
+++ b/WeatherApplication/app/src/main/res/values/strings.xml
@@ -17,4 +17,18 @@
         <item>14</item>
     </string-array>
 
+    <!-- Messages Preferences -->
+    <string name="signature_title" translatable="false">Your signature</string>
+    <string name="reply_title" translatable="false">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="today_notification_title">Today\'s Weather</string>
+    <string name="today_notification_channel_name">Today\'s Forecast</string>
+    <string name="today_notification_channel_description">This notification will show today\'s forecast details</string>
+
 </resources>
