--- a/9.6_WeatherApplication/app/src/main/res/values-night/strings.xml
+++ b/9.6_WeatherApplication/app/src/main/res/values-night/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="space1">\" \"</string>
+    <string name="something_went_wrong">Something went wrong.</string>
 </resources>
